5.2.1 -> 5.2.2:
    - jbj: snapshot rpm-5.2.2 release tarball.
    - jbj: update po files (Translation Project).
    - jbj: solve: commit to a test framework based on EDOS and Poky.
    - jbj: solve: use RPMTAG_PACKAGEORIGIN paths when available.
    - jbj: ruby: fix: retrofit RSTRING_PTR/RSTRING_LEN into ruby-1.8.5.
    - jbj: solve: loop over solve db's in a bag.
    - jbj: solve: stub-in toy add/del methods.
    - jbj: solve: permit multiple solvedb's in a rpmbag.
    - jbj: solve: generalize %_dbpath to permit multiple rpmdb's.
    - jbj: solve: flip --aid "opt-in" behavior to --noaid "opt-out".
    - jbj: solve: fix: don't free the package file name when depsolving.
    - jbj: sqlite: fix: avoid assert failure w %trigger* SECONDARY-SEQUENTIAL
        retrieval using only secondary keys for performance.
    - jbj: fix: save chroot value across embedded scriptlet execution.
	from Przemyslaw Iskra <sparky@pld-linux.org>.

5.2.0 -> 5.2.1:
    - jbj: tag the rpm-5.2.1 tarball.
    - jbj: i18n: update po files (Translation Project).
    - jbj: tests: re-enable additional build options.
    - jbj: tests: "make check" for RHEL6 beta passes.
    - jbj: backport most of "make check".
    - jbj: fix: remove the inheirited %description before adding explicitly.
    - proyvind: python: make sure that we always use our own rpm build and
	macros.
    - proyvind: filetriggers: don't pass filename as argument to scripts,
	(all) filenames are passed through stdin already.
    - afb: permit building with js-1.7.0 (the only released version)
    - proyvind: add %distepoch back to provideversion, leave legacy
	compatibility for adopters to care about.
    - proyvind: fix assert fail with Mandriva filetriggers in case of
	installing src.rpm with no triggers queue. (from David Smid/Unity Linux)
    - proyvind: Change log level to debug level for memory leaks reported.
    - proyvind: Mandriva: log install/remove of packages to syslog.