@@ -3,15 +3,17 @@
 ##
 
 %common
-    MODULE_NAMES="db lua file xar xz pcre syck js/src"
+    MODULE_NAMES="db lua file xar xz pcre syck js/src beecrypt"
+    MODULE_TAG_BEECRYPT=""
     MODULE_TAG_DB="rpm-5_2"
-    MODULE_TAG_LUA="rpm-5_2"
     MODULE_TAG_FILE="rpm-5_2"
-    MODULE_TAG_XAR="rpm-5_2"
-    MODULE_TAG_XZ="rpm-5_2"
+    MODULE_TAG_JS_SRC="rpm-5_2"
+    MODULE_TAG_LUA="rpm-5_2"
+    MODULE_TAG_NEON=""
     MODULE_TAG_PCRE="rpm-5_2"
     MODULE_TAG_SYCK="rpm-5_2"
-    MODULE_TAG_JS_SRC="rpm-5_2"
+    MODULE_TAG_XAR="rpm-5_2"
+    MODULE_TAG_XZ="rpm-5_2"
 
 %checkout
     for name in $MODULE_NAMES "$@"; do
@@ -60,6 +62,8 @@
     %system
 
 %system
+    CPPFLAGS="-DRPM_VENDOR_WINDRIVER"
+    export CPPFLAGS
     #   configure RPM 5 with maximum internal (independence) and maximum
     #   external (reusability) extend as it usually is the case when
     #   building and running RPM as the system package manager on a
@@ -80,7 +84,7 @@
         --with-tcl=external \
         --with-sqlite=external \
         --with-syck=internal \
-        --with-beecrypt=external \
+        --with-beecrypt=internal \
         --with-openssl=external \
         --with-nss=external \
         --with-gcrypt=external \
@@ -89,7 +93,7 @@
         --without-uuid \
         --with-attr \
         --with-acl \
-        --with-xar=internal \
+        --without-xar \
         --with-popt=external \
         --with-keyutils=external \
         --with-pthreads \
