@@ -148,6 +148,76 @@ LIBRPMMISC_0
     xar_iter_new;
     xar_open;
     xar_opt_set;
+    b64crc;
+    b64decode;
+    b64encode;
+    b64encode_chars_per_line;
+    b64encode_eolstr;
+    dldp_pPair;
+    dlkp_pFree;
+    dlkp_pInit;
+    dsaparamMake;
+    dsasign;
+    dsavrfy;
+    i2osp;
+    md4Digest;
+    md4Reset;
+    md4Update;
+    md5Digest;
+    md5Reset;
+    md5Update;
+    mpadd;
+    mpbits;
+    mpbnrnd;
+    mpbsethex;
+    mpfprintln;
+    mplshift;
+    mpnfree;
+    mpnsetbin;
+    mpnsethex;
+    mpnzero;
+    mpsetw;
+    mpzero;
+    randomGeneratorContextFree;
+    randomGeneratorContextInit;
+    randomGeneratorDefault;
+    ripemd128Digest;
+    ripemd128Reset;
+    ripemd128Update;
+    ripemd160Digest;
+    ripemd160Reset;
+    ripemd160Update;
+    ripemd256Digest;
+    ripemd256Reset;
+    ripemd256Update;
+    ripemd320Digest;
+    ripemd320Reset;
+    ripemd320Update;
+    rsakpFree;
+    rsakpMake;
+    rsapricrt;
+    rsavrfy;
+    sha1Digest;
+    sha1Reset;
+    sha1Update;
+    sha224Digest;
+    sha224Reset;
+    sha224Update;
+    sha256Digest;
+    sha256Reset;
+    sha256Update;
+    sha384Digest;
+    sha384Reset;
+    sha384Update;
+    sha512Digest;
+    sha512Reset;
+    sha512Update;
+    hashFunctionContextDigest;
+    hashFunctionContextFree;
+    hashFunctionContextInit;
+    hashFunctionContextUpdateMC;
+    hashFunctionCount;
+    hashFunctionGet;
   local:
     file_*;
     db_*;
