@@ -321,7 +321,6 @@ rpmDigestInit(pgpHashAlgo hashalgo, rpmDigestFlags flags)
 	ctx->Digest = (int (*)(void *, byte *)) sum64Digest;
 /*@=type@*/
 	break;
-#if defined(HAVE_BEECRYPT_API_H)
     case PGPHASHALGO_SHA224:
 	ctx->name = "SHA224";
 	ctx->digestsize = 224/8;
@@ -382,7 +381,6 @@ rpmDigestInit(pgpHashAlgo hashalgo, rpmDigestFlags flags)
 /*@=type@*/
 	ctx->asn1 = "3051300d060960864801650304020305000440";
 	break;
-#endif
     case PGPHASHALGO_HAVAL_5_160:
     default:
 	free(ctx);
