@@ -1,4 +1,6 @@
 5.2.1 -> 5.2.2:
+    - jbj: beecrypt: finish up --with-beecrypt=internal wiring into -lrpmmisc.
+    - jbj: beecrypt: permit --with-beecrypt=internal (w manual checkout/autogen)
     - jbj: snapshot rpm-5.2.2 release tarball.
     - jbj: update po files (Translation Project).
     - jbj: solve: commit to a test framework based on EDOS and Poky.
